adição de icons e splashs, modificação na estrutura do status bar

--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -4,7 +4,8 @@
     <p>
       Parabéns {{funcionario.nome}}!
       <br>
-      Sua matricula é {{funcionario.id}},e sua idade é {{funcionario.idade}} anos.
+      Sua matricula é {{funcionario.id}},<br>
+      e sua idade é {{funcionario.idade}} anos.
     </p>
   </div>
 
