modificações adicionais no fonte

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <img src="../../assets/imgs/avatar.png" class="avatarInicio">
       <ion-col col-12>
         <ion-row class="titulo">
-          <p class="legenda">MobTech - ModuloSistemas</p>
+          <p class="legenda"></p>
         </ion-row>
       </ion-col>
     <ion-row>
